--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #007bff; /* Warna biru */
+    background-color: #007bff;
     color: white;
     display: flex;
     justify-content: center;
